src/test/ui/impl-trait/bound-normalization-fail.stderr
error[E0271]: type mismatch resolving `<Foo<()> as FooLike>::Output == <T as impl_trait::Trait>::Assoc`
  --> $DIR/bound-normalization-fail.rs:25:32
   |
LL |     fn foo_fail<T: Trait>() -> impl FooLike<Output = T::Assoc> {
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type mismatch resolving `<Foo<()> as FooLike>::Output == <T as impl_trait::Trait>::Assoc`
   |
note: expected this to be `<T as impl_trait::Trait>::Assoc`
  --> $DIR/bound-normalization-fail.rs:14:19
   |
LL |     type Output = T;
   |                   ^
   = note: expected associated type `<T as impl_trait::Trait>::Assoc`
                    found unit type `()`
help: consider constraining the associated type `<T as impl_trait::Trait>::Assoc` to `()`
   |
LL |     fn foo_fail<T: Trait<Assoc = ()>>() -> impl FooLike<Output = T::Assoc> {
   |                         ++++++++++++

error[E0760]: `impl Trait` return type cannot contain a projection or `Self` that references lifetimes from a parent scope
  --> $DIR/bound-normalization-fail.rs:41:41
   |
LL |     fn foo2_fail<'a, T: Trait<'a>>() -> impl FooLike<Output = T::Assoc> {
   |                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0271]: type mismatch resolving `<Foo<()> as FooLike>::Output == <T as lifetimes::Trait<'static>>::Assoc`
  --> $DIR/bound-normalization-fail.rs:41:41
   |
LL |     fn foo2_fail<'a, T: Trait<'a>>() -> impl FooLike<Output = T::Assoc> {
   |                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type mismatch resolving `<Foo<()> as FooLike>::Output == <T as lifetimes::Trait<'static>>::Assoc`
   |
note: expected this to be `<T as lifetimes::Trait<'static>>::Assoc`
  --> $DIR/bound-normalization-fail.rs:14:19
   |
LL |     type Output = T;
   |                   ^
   = note: expected associated type `<T as lifetimes::Trait<'static>>::Assoc`
                    found unit type `()`
help: consider constraining the associated type `<T as lifetimes::Trait<'static>>::Assoc` to `()`
   |
LL |     fn foo2_fail<'a, T: Trait<'a, Assoc = ()>>() -> impl FooLike<Output = T::Assoc> {
   |                                 ++++++++++++

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0271, E0760.
For more information about an error, try `rustc --explain E0271`.
